// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button Snapshots If no label or icon provided, do not render anything 1`] = `null`;

exports[`Test Button Snapshots With Reverse 1`] = `
<div
  class="brz-ed-control__button brz-ed-control__button-center reverse"
>
  <svg
    fill="currentColor"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <g>
      <g
        fill="currentColor"
        fill-rule="nonzero"
        stroke="none"
        stroke-width="1"
        transform="matrix(-1 0 0 1 14 0)"
      >
        <path
          d="M9 4H1c-.6 0-1 .4-1 1v10c0 .6.4 1 1 1h8c.6 0 1-.4 1-1V5c0-.6-.4-1-1-1z"
        />
        <path
          d="M13 0H3v2h9v11h2V1c0-.6-.4-1-1-1z"
        />
      </g>
    </g>
  </svg>
  <span
    class="brz-ed-control__label"
  >
    Test
  </span>
</div>
`;

exports[`Test Button Snapshots With Reverse Theme 1`] = `
<div
  class="brz-ed-control__button brz-ed-control__button-center reverse reverseTheme"
>
  <svg
    fill="currentColor"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <g>
      <g
        fill="currentColor"
        fill-rule="nonzero"
        stroke="none"
        stroke-width="1"
        transform="matrix(-1 0 0 1 14 0)"
      >
        <path
          d="M9 4H1c-.6 0-1 .4-1 1v10c0 .6.4 1 1 1h8c.6 0 1-.4 1-1V5c0-.6-.4-1-1-1z"
        />
        <path
          d="M13 0H3v2h9v11h2V1c0-.6-.4-1-1-1z"
        />
      </g>
    </g>
  </svg>
  <span
    class="brz-ed-control__label"
  >
    Test
  </span>
</div>
`;

exports[`Test Button Snapshots With icon 1`] = `
<div
  class="brz-ed-control__button brz-ed-control__button-center"
>
  <svg
    fill="currentColor"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <g>
      <g
        fill="currentColor"
        fill-rule="nonzero"
        stroke="none"
        stroke-width="1"
        transform="matrix(-1 0 0 1 14 0)"
      >
        <path
          d="M9 4H1c-.6 0-1 .4-1 1v10c0 .6.4 1 1 1h8c.6 0 1-.4 1-1V5c0-.6-.4-1-1-1z"
        />
        <path
          d="M13 0H3v2h9v11h2V1c0-.6-.4-1-1-1z"
        />
      </g>
    </g>
  </svg>
</div>
`;

exports[`Test Button Snapshots With label 1`] = `
<div
  class="brz-ed-control__button brz-ed-control__button-center"
>
  <span
    class="brz-ed-control__label"
  >
    Test
  </span>
</div>
`;

exports[`Test Button Snapshots With label and an icon 1`] = `
<div
  class="brz-ed-control__button brz-ed-control__button-center"
>
  <svg
    fill="currentColor"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <g>
      <g
        fill="currentColor"
        fill-rule="nonzero"
        stroke="none"
        stroke-width="1"
        transform="matrix(-1 0 0 1 14 0)"
      >
        <path
          d="M9 4H1c-.6 0-1 .4-1 1v10c0 .6.4 1 1 1h8c.6 0 1-.4 1-1V5c0-.6-.4-1-1-1z"
        />
        <path
          d="M13 0H3v2h9v11h2V1c0-.6-.4-1-1-1z"
        />
      </g>
    </g>
  </svg>
  <span
    class="brz-ed-control__label"
  >
    Test
  </span>
</div>
`;

exports[`Test Button Snapshots With label, icon and left aligment 1`] = `
<div
  class="brz-ed-control__button brz-ed-control__button-left"
>
  <svg
    fill="currentColor"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <g>
      <g
        fill="currentColor"
        fill-rule="nonzero"
        stroke="none"
        stroke-width="1"
        transform="matrix(-1 0 0 1 14 0)"
      >
        <path
          d="M9 4H1c-.6 0-1 .4-1 1v10c0 .6.4 1 1 1h8c.6 0 1-.4 1-1V5c0-.6-.4-1-1-1z"
        />
        <path
          d="M13 0H3v2h9v11h2V1c0-.6-.4-1-1-1z"
        />
      </g>
    </g>
  </svg>
  <span
    class="brz-ed-control__label"
  >
    Test
  </span>
</div>
`;

exports[`Test Button Snapshots With label, icon and right aligment 1`] = `
<div
  class="brz-ed-control__button brz-ed-control__button-left"
>
  <svg
    fill="currentColor"
    height="1em"
    viewBox="0 0 16 16"
    width="1em"
  >
    <g>
      <g
        fill="currentColor"
        fill-rule="nonzero"
        stroke="none"
        stroke-width="1"
        transform="matrix(-1 0 0 1 14 0)"
      >
        <path
          d="M9 4H1c-.6 0-1 .4-1 1v10c0 .6.4 1 1 1h8c.6 0 1-.4 1-1V5c0-.6-.4-1-1-1z"
        />
        <path
          d="M13 0H3v2h9v11h2V1c0-.6-.4-1-1-1z"
        />
      </g>
    </g>
  </svg>
  <span
    class="brz-ed-control__label"
  >
    Test
  </span>
</div>
`;
